name:                loom
version:             0.1.0.0
synopsis:            trying to build weird things
description:         coming soon
homepage:            http://github.com/cabbibo/loom-haskell
license:             BSD3
license-file:        LICENSE
author:              Isaac Cohen
maintainer:          isaaclandoncohen@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag UseOculusSDK
  Description: Enable direct Oculus SDK support (rather than via SteamVR)
  Default:     False

library
  hs-source-dirs:      src
  exposed-modules:     
    Game.Pal
    Game.Pal.Hands
    Game.Pal.Movement
    Game.Pal.Types
    Game.Pal.View
    Game.Pal.Window
  build-depends:
    base,
    binary,
    mtl,
    lens-extra,
    linear-extra,
    gl,
    glfw-pal,
    gl-pal,
    hydra-hs,
    oculus-mini,
    random,
    containers,
    MonadRandom,
    openvr-hs,
    time
  if flag(UseOculusSDK)
    build-depends:
      oculus-mini
    cpp-options: -DUSE_OCULUS_SDK
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -Wall -O2 -fprof-auto


executable jello
  hs-source-dirs:      app
  main-is:             Jello.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-pal
                     , glfw-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     , lens-extra
                     , halive
  default-language:    Haskell2010


executable catenary
  hs-source-dirs:      app
  main-is:             Catenary.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , game-pal
                     , glfw-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     , lens-extra
                     , halive
                     , random
                     , containers
                     , MonadRandom
                     , time
                     , lens
                     , linear

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cabbibo/loom-haskell
